# research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.bot.toml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  drift.yml  security.yml
app/: config.py  errors.py  logging_config.py  main.py  middleware.py  observability.py  pricing.py  rate_limit.py
app/api/: cache_routes.py  routes.py
app/cache/: dedup.py  history.py  semantic.py
app/eval/: agreement.py  metrics.py
app/graph/: callbacks.py  edges.py  graph.py  nodes.py  prompts.py  speculative.py  state.py
app/llm/: router.py
app/mcp_server/: __main__.py  server.py
app/models/: db.py  engine.py
app/tools/: attribution.py  circuit_breaker.py  cross_encoder_ranker.py  hyde.py  reranker.py  retriever.py  safety.py  search.py  splitter.py  summariser.py
bot/: bot.py
docs/: api.md  architecture.md
loadtests/: README.md  locustfile.py
migrations/: env.py
migrations/versions/: 14199dc70f7f_create_research_sessions_table.py  7716b8b9e9d1_add_parent_doc_cols_to_documents.py  8a532448d6b0_add_topic_cache_table.py  a0fa68762bab_add_bm25_tsvector_to_documents.py  abece50dbc97_add_golden_reports_table.py  aef5b97b1098_add_api_key_hash_to_sessions.py  b4ad0941dc2e_add_documents_table.py  dba449ab1ff8_add_user_research_history.py  dfc8875db4cf_add_token_usage_metrics.py  eef0cc53a989_add_api_key_hash_to_topic_cache.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: research-assistant.json
scripts/: deploy.sh  eval.py  eval_dataset.json  eval_drift.py  eval_pairwise.py
tests/: conftest.py  test_edges.py  test_schemas.py
tests/graph/: test_agreement.py  test_attribution.py  test_checkpointer_pause_resume.py  test_circuit_breaker.py  test_dedup.py  test_eval_baseline.py  test_eval_scripts.py  test_hyde_planner_kg.py  test_langchain_integration.py  test_nodes.py  test_ragas_metrics.py  test_refine_node.py  test_revision_loop_integration.py  test_safety.py  test_speculative_history_adaptive.py  test_summariser_and_sanitiser.py
tests/integration/: test_api_followup.py  test_api_plan_approve.py  test_api_result_metrics.py  test_api_start.py  test_auth_ratelimit.py  test_body_size.py  test_cache_routes.py  test_e2e_happy_path.py  test_e2e_interrupt_recovery.py  test_mcp_server.py  test_real_db.py  test_semantic_cache.py
